--- a/day1/index.html
+++ b/day1/index.html
@@ -74,10 +74,10 @@
         <th class="day">Monday</th>
         <td class="sub1">AOSC</td>
         <td class="sub2">DAA</td>
-        <td rowspan="8" class="day">WATER BREAK</td>
+        <td rowspan="8" class="DT">WATER BREAK</td>
         <td class="sub3">DBMS</td>
         <td colspan="2" class="sub4">FSD</td>
-        <td rowspan="8" class="day">LUNCH BREAK</td>
+        <td rowspan="8" class="DT">LUNCH BREAK</td>
         <td colspan="3" class="sub5">DSA</td>
        
     </tr>
