--- a/day2/hamster.html
+++ b/day2/hamster.html
@@ -18,6 +18,7 @@
     <a href="mailto:Kavya@gamail.com">Email us</a><br>
     <a href="tel:+9170374751">Contact us</a><br>
     <a href="#head">go on the top</a><br>
+    <a href="./form.html">Click here for registration page</a> <br>
     <img src="https://thumbs.dreamstime.com/b/syrian-hamster-cute-full-cheeked-relaxes-soft-blanket-364416360.jpg" alt="Hamster" style="width: 200px; height: 200px;"><br><br>
     <iframe src="./timetable.html" frameborder="0"></iframe>
 </body>
