--- a/day2/welcome.html
+++ b/day2/welcome.html
@@ -8,6 +8,6 @@
 <body>
     <h1>Congratulations!</h1>
     <div>Your Registration has been done.</div>
-    <a href="./login.html"> Go to Login</a>   <!-- . for any file and .. for any folder ../foldername./filename  if any file is inside the folder -->
+    <a href="./login.html"> Go to Login Page</a>   <!-- . for any file and .. for any folder ../foldername./filename  if any file is inside the folder -->
 </body>
 </html>
